<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <TextView
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:padding="16dp"
        android:text="@string/custom_provider_title"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/custom_provider_prefix"
            fontPath="fonts/Roboto-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:text="@string/custom_provider_prefix"
            android:textColor="@color/textColor"
            android:textSize="@dimen/custom_provider_text_size"
            tools:ignore="MissingPrefix"/>

        <EditText
            android:id="@+id/custom_provider_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/custom_provider_prefix"
            android:layout_toRightOf="@+id/custom_provider_prefix"
            android:textSize="@dimen/custom_provider_text_size"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/custom_provider_connect"
        style="@style/BigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/custom_provider_connect"/>
</LinearLayout>
