<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/home_title"/>

    <TextView
        android:id="@+id/noProvidersYet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_margin="12dp"
        android:gravity="center"
        android:text="@string/no_providers_yet_click_on_add_provider"
        android:textColor="@color/hintColor"
        android:textSize="15sp"/>

    <FrameLayout
        android:id="@+id/loadingBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/header"
        android:background="?attr/selectableItemBackground"
        android:clickable="false">

        <TextView
            android:id="@+id/displayText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/loading_available_profiles"
            android:textColor="@color/textColor"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:indeterminate="true"/>

        <ImageView
            android:id="@+id/warningIcon"
            android:layout_width="32dp"
            android:tint="@color/iconColor"
            android:layout_height="32dp"
            android:layout_marginLeft="24dp"
            android:contentDescription="@string/content_description_warning_icon"
            android:src="@drawable/maintenance_icon"
            android:visibility="gone"/>
    </FrameLayout>

    <Button
        android:id="@+id/addProvider"
        style="@style/BigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:text="@string/home_add_provider"/>

    <View
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignBottom="@+id/loadingBar"
        android:layout_marginTop="-12dp"
        android:background="@drawable/loading_gradient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/addProvider"
        android:layout_below="@+id/loadingBar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/secureInternetContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/AuthorizationTypeHeader"
                android:text="@string/header_secure_internet"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/secureInternetList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/list_item_config"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/instituteAccessContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/AuthorizationTypeHeader"
                android:text="@string/header_institute_access"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/instituteAccessList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/list_item_config"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
