<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="nl.eduvpn.app.viewmodel.AddServerViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/artwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:src="@drawable/ic_add_server"/>

            <TextView
                android:id="@+id/header"
                style="@style/Header"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/add_server_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_search"
                android:elevation="4dp">

                <EditText
                    android:id="@+id/server_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/add_server_hint"
                    android:imeOptions="actionGo"
                    android:includeFontPadding="false"
                    android:inputType="textUri"
                    android:text="@={viewModel.serverUrl}"
                    android:textColor="@color/textColor" />

            </LinearLayout>

            <Button
                android:id="@+id/add_server_button"
                style="@style/BigButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:enabled="@{viewModel.addButtonEnabled}"
                android:text="@string/add_server_button" />

        </LinearLayout>

        <include
            layout="@layout/include_loading"
            app:connectionState="@{viewModel.connectionState}" />

    </FrameLayout>
</layout>